2008-01-13 Sebastien Pouliot  <sebastien@ximian.com>

	* TypeRocks.cs: Add IsNative [Andreas Noever]

2008-01-12  Sebastien Pouliot  <sebastien@ximian.com>

	* TypeRocks.cs: Add IsFloatingPoint rock and update IsGeneratedCode
	to deal with code compiled before 2.0

2008-01-05  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyRocks.cs: Rename calls to Contains[Any] -> Contains[Any]Type
	* CustomAttributeRocks.cs: Rename Contains to ContainsType (and
	ContainsAny to ContainsAnyType) to avoid an extension methods that
	would also be an overload to a Cecil method (revert JB's confusion ;-)
	* FieldRocks.cs: New. Extension methods for Cecil's FieldDefinition
	class.
	* MethodRocks.cs: Rename calls to Contains[Any] -> Contains[Any]Type
	* TypeRocks.cs: Rename calls to Contains[Any] -> Contains[Any]Type

2008-01-04  Sebastien Pouliot  <sebastien@ximian.com>

	* AssemblyRocks.cs: New. Extension methods for Cecil's 
	AssemblyDefinition class.
	* CustomAttributeRocks.cs: Add ContainsAny method that checks if 
	any of the specified attributes are present in the collection.
	* MethodRocks.cs: Replace IsCompilerGenerated by the more general
	IsGeneratedCode, which check for two similar attributes and also 
	checks if the type was generated.
	* TypeRocks.cs: Add GetFinalizer to return the type finalizer (if 
	any). Add IsGeneratedCode (similar to MethodRocks). Change 
	HasAttribute to work on a TypeReference (instead of TypeDefinition)

2008-01-02  Sebastien Pouliot  <sebastien@ximian.com> 

	* MethodRocks.cs: Added IsArray extension method (based on code 
	from Adrian Tsai).
	* TypeRocks.cs: Added IsAttribute and Inherits extensions methods
	(based on code from Daniel Abramov) and IsProperty (based on code
	from Adrian Tsai).

2007-12-26  Sebastien Pouliot  <sebastien@ximian.com> 

	* CustomAttributeRocks.cs: New. Extension methods for Cecil's 
	CustomAttribute[Collection] classes.
	* MethodRocks.cs: New. Extension methods for Cecil's 