@@ -71,6 +71,17 @@ namespace Gendarme.Framework.Rocks {
 		}
 
 		/// <summary>
+		/// Check if the MethodReference is a finalizer.
+		/// </summary>
+		/// <param name="self">The MethodReference on which the extension method can be called.</param>
+		/// <returns>True if the method is a finalizer, False otherwise.</returns>
+		public static bool IsFinalizer (this MethodReference self)
+		{
+			return (self.HasThis && (self.Parameters.Count == 0) && (self.Name == "Finalize") &&
+				(self.ReturnType.ReturnType.FullName == "System.Void"));
+		}
+
+		/// <summary>
 		/// Check if the method, or it's declaring type, was generated by the compiler or a tool (i.e. not by the developer).
 		/// </summary>
 		/// <param name="self">The MethodDefinition on which the extension method can be called.</param>
